--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Space+Mono:700&display=swap');
-
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
 /* 
 
 Así se escriben los comentario en CSS.
@@ -22,7 +22,7 @@ body{
 }
 
 h1, h2{
-    font-family:'Space Mono', monospace;
+    font-family:'Playfair Display', monospace;
     color:#FFFFFF; /* lo básico, para evitar problemas */
     color:rgba(255,255,255,0.8); /* si el navegador lo entiende, lo usa */
     text-align:center;
