--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Montserrat&effect=anaglyph');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,900&effect=anaglyph');
 
 /* 
 
