--- a/estilo.css
+++ b/estilo.css
@@ -25,17 +25,17 @@ h1, h2{
     font-family: 'Montserrat', sans-serif;
     color:#FFFFFF; /* lo básico, para evitar problemas */
     color:rgba(255,255,255,0.8); /* si el navegador lo entiende, lo usa */
-    text-align:center;
+    text-align:left;
     letter-spacing:0.1em;
     font-weight:900;
 }
 
 h1{
-    font-size:3rem;
+    font-size:4rem;
 }
 
 h2{
-    font-size:2rem;
+    font-size:2.5rem;
     letter-spacing:0.1em;
 }
 
@@ -215,7 +215,7 @@ AHORA VAMOS POR PORTAFOLIO
 #portafolio{
     width:100%;
     padding:.25% 0;
-    background:linear-gradient(to bottom, #ffcccc, #ffffff);
+    background:linear-gradient(to bottom, #ffffff, #ffcccc);
 }
 
 .item {
