--- a/estilo.css
+++ b/estilo.css
@@ -26,6 +26,7 @@ h1, h2{
     color:#FFFFFF; /* lo básico, para evitar problemas */
     color:rgba(255,255,255,0.8); /* si el navegador lo entiende, lo usa */
     text-align:left;
+    margin-left: 2rem
     letter-spacing:0.1em;
     font-weight:900;
 }
@@ -35,7 +36,7 @@ h1{
 }
 
 h2{
-    font-size:2.5rem;
+    font-size:2rem;
     letter-spacing:0.1em;
 }
 
