--- a/estilo.css
+++ b/estilo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=DM+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Livvic&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,900&effect=anaglyph');
 
 /* 
@@ -15,7 +15,7 @@ se cierran con asterisco slash.
 }
 
 body{
-    font-family:'DM Sans', sans-serif;
+    font-family: 'Livvic', sans-serif;
     font-weight:400;
     color:#373737;
     background-color:#FFFFFF; /*el primer par es R, segundo es G y tercero es B*/
