--- a/estilo.css
+++ b/estilo.css
@@ -160,7 +160,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(1){
     background-color:#F83277;
-    background-image:url('media/integrante-1a.png');
+    background-image:url('media/Diana catalan.png');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
@@ -169,7 +169,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(2){
     background:#F93332;
-    background-image:url('media/integrante-2a.png');
+    background-image:url('media/Sophia lopez.png');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
@@ -177,7 +177,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(3){
     background:#FA7633;
-    background-image:url('media/integrante-3a.png');
+    background-image:url('media/Josefina Maige.png');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
@@ -185,7 +185,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(1):hover{
     background-color:#c2185b;
-    background-image:url('media/integrante-1b.png');
+    background-image:url('media/Diana catalan.png');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
