--- a/estilo.css
+++ b/estilo.css
@@ -185,7 +185,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(1):hover{
     background-color:#c2185b;
-    background-image:url('media/Diana catalan.png');
+    background-image:url('media/Dianacatalan-bn.jpg');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
@@ -193,7 +193,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(2):hover{
     background:#d32f2f;
-    background-image:url('media/integrante-2b.png');
+    background-image:url('media/Sophia-lopez-bn.jpg');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
@@ -201,7 +201,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(3):hover{
     background:#ef6c00;
-    background-image:url('media/integrante-3b.png');
+    background-image:url('media/josefina-maige-bn.jpg');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
