--- a/estilo.css
+++ b/estilo.css
@@ -25,8 +25,8 @@ h1, h2{
     font-family: 'Montserrat', sans-serif;
     color:#FFFFFF; /* lo básico, para evitar problemas */
     color:rgba(255,255,255,0.8); /* si el navegador lo entiende, lo usa */
+    margin-left:4rem;
     text-align:left;
-    margin-left:4em
     letter-spacing:0.1em;
     font-weight:900;
 }
