--- a/estilo.css
+++ b/estilo.css
@@ -185,7 +185,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 
 .integrante:nth-of-type(1):hover{
     background-color:#c2185b;
-    background-image:url('media/Diana-catalan.png');
+    background-image:url('media/Diana-catalan-blanco-y-negro.png');
     background-position: bottom right;
     background-size:auto 90%;
     background-repeat: no-repeat;
