--- a/estilo.css
+++ b/estilo.css
@@ -216,7 +216,7 @@ AHORA VAMOS POR PORTAFOLIO
 #portafolio{
     width:100%;
     padding:.25% 0;
-    background:linear-gradient(to bottom, #ffffff, #ffcccc);
+    background:linear-gradient(to bottom, #999, #000);
 }
 
 .item {
