--- a/estilo.css
+++ b/estilo.css
@@ -200,7 +200,7 @@ en https://www.taniarascia.com/easiest-flex-grid-ever/
 }
 
 .integrante:nth-of-type(3):hover{
-    background:#33ffcc;
+    background:#00e3e3;
     background-image:url('media/josefina maigebnn.png');
     background-position: bottom right;
     background-size:auto 90%;
